# ridge

./: .codecov.yml  .coveragerc  .gitignore  .travis.yml  README.md  setup.cfg  setup.py
ridge/: ridge.py  svd_dgesvd.py  utils.py
ridge/tests/: test.py  test_ridge.py
