[metadata]
provides =
    ridge

[options]
python_requires = >= 3.5
install_requires =
    numpy
test_requires =
    pytest
    pytest-cov
    nose
    codecov
packages = find:
include_package_data = True

[options.extras_require]
test =
    pytest
    pytest-cov
    nose
    codecov
tests =
    %(test)s
all =
    %(test)s

[flake8]
max-line-length = 99
doctests = False
ignore =
exclude=*build/

[tool:pytest]
norecursedirs = .git
addopts = -svx --doctest-modules
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning
junit_family=xunit2